@@ -17,29 +17,46 @@
 
 package org.apache.ignite.internal.metastorage.server;
 
+import static java.nio.file.StandardOpenOption.WRITE;
+import static java.util.concurrent.CompletableFuture.failedFuture;
 import static java.util.stream.Collectors.collectingAndThen;
 import static java.util.stream.Collectors.toList;
+import static java.util.stream.Collectors.toMap;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.NOT_FOUND;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.assertCompactionRevisionLessThanCurrent;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.assertRequestedRevisionLessThanOrEqualToCurrent;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.indexToCompact;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.isLastIndex;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.maxRevisionIndex;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.minRevisionIndex;
+import static org.apache.ignite.internal.metastorage.server.KeyValueStorageUtils.toUtf8String;
 import static org.apache.ignite.internal.metastorage.server.Value.TOMBSTONE;
 import static org.apache.ignite.internal.metastorage.server.raft.MetaStorageWriteHandler.IDEMPOTENT_COMMAND_PREFIX;
 import static org.apache.ignite.internal.rocksdb.RocksUtils.incrementPrefix;
+import static org.apache.ignite.internal.util.ArrayUtils.LONG_EMPTY_ARRAY;
 import static org.apache.ignite.internal.util.ByteUtils.toByteArray;
+import static org.apache.ignite.internal.util.CompletableFutures.nullCompletedFuture;
 import static org.apache.ignite.lang.ErrorGroups.MetaStorage.OP_EXECUTION_ERR;
+import static org.apache.ignite.lang.ErrorGroups.MetaStorage.RESTORING_STORAGE_ERR;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.NavigableMap;
-import java.util.Objects;
 import java.util.SortedMap;
 import java.util.TreeMap;
 import java.util.TreeSet;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentSkipListMap;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.LongConsumer;
 import java.util.function.Predicate;
 import org.apache.ignite.internal.failure.NoOpFailureManager;
@@ -52,10 +69,13 @@ import org.apache.ignite.internal.metastorage.WatchListener;
 import org.apache.ignite.internal.metastorage.dsl.Operation;
 import org.apache.ignite.internal.metastorage.dsl.Operations;
 import org.apache.ignite.internal.metastorage.dsl.StatementResult;
+import org.apache.ignite.internal.metastorage.exceptions.CompactedException;
 import org.apache.ignite.internal.metastorage.exceptions.MetaStorageException;
 import org.apache.ignite.internal.metastorage.impl.EntryImpl;
 import org.apache.ignite.internal.metastorage.impl.MetaStorageManagerImpl;
+import org.apache.ignite.internal.util.ByteUtils;
 import org.apache.ignite.internal.util.Cursor;
+import org.apache.ignite.internal.util.IgniteUtils;
 import org.jetbrains.annotations.Nullable;
 
 /**
@@ -65,23 +85,56 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     /** Lexicographical comparator. */
     private static final Comparator<byte[]> CMP = Arrays::compareUnsigned;
 
-    /** Keys index. Value is the list of all revisions under which entry corresponding to the key was modified. */
-    private NavigableMap<byte[], List<Long>> keysIdx = new TreeMap<>(CMP);
+    /**
+     * Keys index. Value is the list of all revisions under which entry corresponding to the key was modified.
+     *
+     * <p>Concurrent map to avoid {@link java.util.ConcurrentModificationException} on compaction.</p>
+     *
+     * <p>Guarded by {@link #mux}.</p>
+     */
+    private final NavigableMap<byte[], List<Long>> keysIdx = new ConcurrentSkipListMap<>(CMP);
 
     /** Timestamp to revision mapping. */
     private final NavigableMap<Long, Long> tsToRevMap = new TreeMap<>();
 
-    /** Revision to timestamp mapping. */
+    /**
+     * Revision to timestamp mapping.
+     *
+     * <p>Guarded by {@link #mux}.</p>
+     */
     private final Map<Long, HybridTimestamp> revToTsMap = new HashMap<>();
 
-    /** Revisions index. Value contains all entries which were modified under particular revision. */
-    private NavigableMap<Long, NavigableMap<byte[], Value>> revsIdx = new TreeMap<>();
+    /**
+     * Revisions index. Value contains all entries which were modified under particular revision.
+     *
+     * <p>Concurrent map to avoid {@link java.util.ConcurrentModificationException} on compaction.</p>
+     *
+     * <p>Guarded by {@link #mux}.</p>
+     */
+    private final NavigableMap<Long, NavigableMap<byte[], Value>> revsIdx = new ConcurrentSkipListMap<>();
 
-    /** Revision. Will be incremented for each single-entry or multi-entry update operation. */
+    /**
+     * Revision. Will be incremented for each single-entry or multi-entry update operation.
+     *
+     * <p>Multi-threaded access is guarded by {@link #mux}.</p>
+     */
     private long rev;
 
-    /** Update counter. Will be incremented for each update of any particular entry. */
-    private long updCntr;
+    /**
+     * Last compaction revision that was set or restored from a snapshot.
+     *
+     * <p>This field is used by metastorage read methods to determine whether {@link CompactedException} should be thrown.</p>
+     *
+     * <p>Multi-threaded access is guarded by {@link #mux}.</p>
+     */
+    private long compactionRevision = -1;
+
+    /**
+     * Last {@link #saveCompactionRevision saved} compaction revision.
+     *
+     * <p>Used only when working with snapshots.</p>
+     */
+    private long savedCompactionRevision = -1;
 
     /** All operations are queued on this lock. */
     private final Object mux = new Object();
@@ -97,6 +150,8 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
      * Guarded by {@link #mux}.
      */
     private @Nullable LongConsumer recoveryRevisionListener;
+
+    private final AtomicBoolean stopCompaction = new AtomicBoolean();
 
     public SimpleInMemoryKeyValueStorage(String nodeName) {
         this.watchProcessor = new WatchProcessor(nodeName, this::get, new NoOpFailureManager());
@@ -115,18 +170,11 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     }
 
     @Override
-    public long updateCounter() {
-        synchronized (mux) {
-            return updCntr;
-        }
-    }
-
-    @Override
     public void put(byte[] key, byte[] value, HybridTimestamp opTs) {
         synchronized (mux) {
             long curRev = rev + 1;
 
-            doPut(key, value, curRev);
+            doPut(key, value, curRev, opTs);
 
             updateRevision(curRev, opTs);
         }
@@ -186,14 +234,14 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     }
 
     @Override
-    public Collection<Entry> getAll(List<byte[]> keys) {
+    public List<Entry> getAll(List<byte[]> keys) {
         synchronized (mux) {
             return doGetAll(keys, rev);
         }
     }
 
     @Override
-    public Collection<Entry> getAll(List<byte[]> keys, long revUpperBound) {
+    public List<Entry> getAll(List<byte[]> keys, long revUpperBound) {
         synchronized (mux) {
             return doGetAll(keys, revUpperBound);
         }
@@ -204,9 +252,8 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
         synchronized (mux) {
             long curRev = rev + 1;
 
-            if (doRemove(key, curRev)) {
-                updateRevision(curRev, opTs);
-            }
+            doRemove(key, curRev, opTs);
+            updateRevision(curRev, opTs);
         }
     }
 
@@ -238,8 +285,8 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     @Override
     public boolean invoke(
             Condition condition,
-            Collection<Operation> success,
-            Collection<Operation> failure,
+            List<Operation> success,
+            List<Operation> failure,
             HybridTimestamp opTs,
             CommandId commandId
     ) {
@@ -248,7 +295,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
 
             boolean branch = condition.test(e.toArray(new Entry[]{}));
 
-            Collection<Operation> ops = branch ? new ArrayList<>(success) : new ArrayList<>(failure);
+            List<Operation> ops = branch ? new ArrayList<>(success) : new ArrayList<>(failure);
 
             // In case of in-memory storage, there's no sense in "persisting" invoke result, however same persistent source operations
             // were added in order to have matching revisions count through all storages.
@@ -259,19 +306,15 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
 
             long curRev = rev + 1;
 
-            boolean modified = false;
-
             for (Operation op : ops) {
                 switch (op.type()) {
                     case PUT:
-                        doPut(toByteArray(op.key()), toByteArray(op.value()), curRev);
-
-                        modified = true;
+                        doPut(toByteArray(op.key()), toByteArray(op.value()), curRev, opTs);
 
                         break;
 
                     case REMOVE:
-                        modified |= doRemove(toByteArray(op.key()), curRev);
+                        doRemove(toByteArray(op.key()), curRev, opTs);
 
                         break;
 
@@ -283,9 +326,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
                 }
             }
 
-            if (modified) {
-                updateRevision(curRev, opTs);
-            }
+            updateRevision(curRev, opTs);
 
             return branch;
         }
@@ -303,9 +344,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
                 if (branch.isTerminal()) {
                     long curRev = rev + 1;
 
-                    boolean modified = false;
-
-                    Collection<Operation> ops = new ArrayList<>(branch.update().operations());
+                    List<Operation> ops = new ArrayList<>(branch.update().operations());
 
                     // In case of in-memory storage, there's no sense in "persisting" invoke result, however same persistent source
                     // operations were added in order to have matching revisions count through all storages.
@@ -317,14 +356,12 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
                     for (Operation op : ops) {
                         switch (op.type()) {
                             case PUT:
-                                doPut(toByteArray(op.key()), toByteArray(op.value()), curRev);
-
-                                modified = true;
+                                doPut(toByteArray(op.key()), toByteArray(op.value()), curRev, opTs);
 
                                 break;
 
                             case REMOVE:
-                                modified |= doRemove(toByteArray(op.key()), curRev);
+                                doRemove(toByteArray(op.key()), curRev, opTs);
 
                                 break;
 
@@ -336,9 +373,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
                         }
                     }
 
-                    if (modified) {
-                        updateRevision(curRev, opTs);
-                    }
+                    updateRevision(curRev, opTs);
 
                     return branch.update().result();
                 } else {
@@ -351,29 +386,14 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     @Override
     public Cursor<Entry> range(byte[] keyFrom, byte @Nullable [] keyTo) {
         synchronized (mux) {
-            return range(keyFrom, keyTo, rev);
+            return doRange(keyFrom, keyTo, rev);
         }
     }
 
     @Override
     public Cursor<Entry> range(byte[] keyFrom, byte @Nullable [] keyTo, long revUpperBound) {
         synchronized (mux) {
-            SortedMap<byte[], List<Long>> subMap = keyTo == null
-                    ? keysIdx.tailMap(keyFrom)
-                    : keysIdx.subMap(keyFrom, keyTo);
-
-            return subMap.entrySet().stream()
-                    .map(e -> {
-                        long targetRevision = maxRevision(e.getValue(), revUpperBound);
-
-                        if (targetRevision == -1) {
-                            return EntryImpl.empty(e.getKey());
-                        }
-
-                        return doGetValue(e.getKey(), targetRevision);
-                    })
-                    .filter(e -> !e.empty())
-                    .collect(collectingAndThen(toList(), Cursor::fromIterable));
+            return doRange(keyFrom, keyTo, revUpperBound);
         }
     }
 
@@ -384,8 +404,18 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
 
     @Override
     public HybridTimestamp timestampByRevision(long revision) {
+        assert revision >= 0 : revision;
+
         synchronized (mux) {
-            return Objects.requireNonNull(revToTsMap.get(revision), "Revision " + revision + " not found");
+            assertRequestedRevisionLessThanOrEqualToCurrent(revision, rev);
+
+            HybridTimestamp timestamp = revToTsMap.get(revision);
+
+            if (timestamp == null) {
+                throw new CompactedException("Requested revision has already been compacted: " + revision);
+            }
+
+            return timestamp;
         }
     }
 
@@ -395,8 +425,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
             Map.Entry<Long, Long> revisionEntry = tsToRevMap.floorEntry(timestamp.longValue());
 
             if (revisionEntry == null) {
-                // Nothing to compact yet.
-                return -1;
+                throw new CompactedException("Revisions less than or equal to the requested one are already compacted: " + timestamp);
             }
 
             return revisionEntry.getValue();
@@ -469,7 +498,7 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
         revsIdx.tailMap(minWatchRevision)
                 .forEach((revision, entries) -> {
                     entries.forEach((key, value) -> {
-                        var entry = new EntryImpl(key, value.bytes(), revision, value.updateCounter());
+                        var entry = new EntryImpl(key, value.bytes(), revision, value.operationTimestamp());
 
                         updatedEntries.add(entry);
                     });
@@ -485,8 +514,10 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
             return;
         }
 
-        HybridTimestamp ts = revToTsMap.get(updatedEntries.get(0).revision());
-        assert ts != null;
+        long revision = updatedEntries.get(0).revision();
+
+        HybridTimestamp ts = revToTsMap.get(revision);
+        assert ts != null : revision;
 
         watchProcessor.notifyWatches(List.copyOf(updatedEntries), ts);
 
@@ -499,286 +530,256 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
     }
 
     @Override
-    public void compact(HybridTimestamp lowWatermark) {
-        synchronized (mux) {
-            NavigableMap<byte[], List<Long>> compactedKeysIdx = new TreeMap<>(CMP);
+    public void compact(long revision) {
+        assert revision >= 0 : revision;
 
-            NavigableMap<Long, NavigableMap<byte[], Value>> compactedRevsIdx = new TreeMap<>();
+        for (Map.Entry<byte[], List<Long>> entry : keysIdx.entrySet()) {
+            synchronized (mux) {
+                assertCompactionRevisionLessThanCurrent(revision, rev);
 
-            long maxRevision = revisionByTimestamp(lowWatermark);
+                if (stopCompaction.get()) {
+                    return;
+                }
 
-            if (maxRevision == -1) {
-                return;
+                compactForKey(entry.getKey(), toLongArray(entry.getValue()), revision);
             }
+        }
 
-            keysIdx.forEach((key, revs) -> compactForKey(key, revs, compactedKeysIdx, compactedRevsIdx, maxRevision));
+        synchronized (mux) {
+            for (Iterator<Map.Entry<Long, HybridTimestamp>> it = revToTsMap.entrySet().iterator(); it.hasNext(); ) {
+                Map.Entry<Long, HybridTimestamp> e = it.next();
 
-            keysIdx = compactedKeysIdx;
+                if (e.getKey() <= revision) {
+                    it.remove();
 
-            revsIdx = compactedRevsIdx;
+                    tsToRevMap.remove(e.getValue().longValue());
+                } else {
+                    break;
+                }
+            }
         }
     }
 
     @Override
+    public void stopCompaction() {
+        stopCompaction.set(true);
+    }
+
+    @Override
     public void close() {
+        stopCompaction();
+
         watchProcessor.close();
     }
 
     @Override
     public CompletableFuture<Void> snapshot(Path snapshotPath) {
-        throw new UnsupportedOperationException();
+        synchronized (mux) {
+            try {
+                Files.createDirectories(snapshotPath);
+
+                Path snapshotFile = snapshotPath.resolve(SimpleInMemoryKeyValueStorageSnapshot.FILE_NAME);
+
+                assertTrue(IgniteUtils.deleteIfExists(snapshotFile), snapshotFile.toString());
+
+                Files.createFile(snapshotFile);
+
+                Map<Long, Map<byte[], ValueSnapshot>> revsIdxCopy = revsIdx.entrySet().stream()
+                        .collect(toMap(
+                                Map.Entry::getKey,
+                                revIdxEntry -> revIdxEntry.getValue()
+                                        .entrySet()
+                                        .stream()
+                                        .collect(toMap(Map.Entry::getKey, e -> new ValueSnapshot(e.getValue())))
+                        ));
+
+                var snapshot = new SimpleInMemoryKeyValueStorageSnapshot(
+                        Map.copyOf(keysIdx),
+                        Map.copyOf(tsToRevMap),
+                        Map.copyOf(revToTsMap),
+                        revsIdxCopy,
+                        rev,
+                        savedCompactionRevision
+                );
+
+                byte[] snapshotBytes = ByteUtils.toBytes(snapshot);
+
+                Files.write(snapshotFile, snapshotBytes, WRITE);
+
+                return nullCompletedFuture();
+            } catch (Throwable t) {
+                return failedFuture(t);
+            }
+        }
     }
 
     @Override
     public void restoreSnapshot(Path snapshotPath) {
-        throw new UnsupportedOperationException();
+        synchronized (mux) {
+            try {
+                keysIdx.clear();
+                tsToRevMap.clear();
+                revToTsMap.clear();
+                revsIdx.clear();
+
+                Path snapshotFile = snapshotPath.resolve(SimpleInMemoryKeyValueStorageSnapshot.FILE_NAME);
+
+                assertTrue(Files.exists(snapshotPath), snapshotFile.toString());
+
+                byte[] snapshotBytes = Files.readAllBytes(snapshotFile);
+
+                var snapshot = (SimpleInMemoryKeyValueStorageSnapshot) ByteUtils.fromBytes(snapshotBytes);
+
+                keysIdx.putAll(snapshot.keysIdx);
+                tsToRevMap.putAll(snapshot.tsToRevMap);
+                revToTsMap.putAll(snapshot.revToTsMap);
+                snapshot.revsIdx.forEach((revision, entries) -> {
+                    TreeMap<byte[], Value> entries0 = new TreeMap<>(CMP);
+                    entries.forEach((keyBytes, valueSnapshot) -> entries0.put(keyBytes, valueSnapshot.toValue()));
+
+                    revsIdx.put(revision, entries0);
+                });
+
+                rev = snapshot.rev;
+                compactionRevision = snapshot.savedCompactionRevision;
+                savedCompactionRevision = snapshot.savedCompactionRevision;
+            } catch (Throwable t) {
+                throw new MetaStorageException(RESTORING_STORAGE_ERR, t);
+            }
+        }
     }
 
-    private boolean doRemove(byte[] key, long curRev) {
+    private void doRemove(byte[] key, long curRev, HybridTimestamp opTs) {
         Entry e = doGet(key, curRev);
 
         if (e.empty() || e.tombstone()) {
-            return false;
+            return;
         }
 
-        doPut(key, TOMBSTONE, curRev);
-
-        return true;
+        doPut(key, TOMBSTONE, curRev, opTs);
     }
 
     /**
-     * Compacts all entries by the given key, removing revision that are no longer needed.
-     * Last entry with a revision lesser or equal to the {@code minRevisionToKeep} and all consecutive entries will be preserved.
-     * If the first entry to keep is a tombstone, it will be removed.
+     * Compacts the key, see the documentation of {@link KeyValueStorage#compact} for examples.
      *
-     * @param key A key.
-     * @param revs All revisions of a key.
-     * @param compactedKeysIdx Out parameter, revisions that need to be kept must be put here.
-     * @param compactedRevsIdx Out parameter, values that need to be kept must be put here.
-     * @param minRevisionToKeep Minimum revision that should be kept.
+     * @param key Target key.
+     * @param revs Key revisions.
+     * @param compactionRevision Revision up to which (inclusively) the key will be compacted.
+     * @throws MetaStorageException If failed.
      */
-    private void compactForKey(
-            byte[] key,
-            List<Long> revs,
-            Map<byte[], List<Long>> compactedKeysIdx,
-            Map<Long, NavigableMap<byte[], Value>> compactedRevsIdx,
-            long minRevisionToKeep
-    ) {
-        List<Long> revsToKeep = new ArrayList<>();
+    private void compactForKey(byte[] key, long[] revs, long compactionRevision) {
+        int indexToCompact = indexToCompact(revs, compactionRevision, revision -> isTombstoneForCompaction(key, revision));
 
-        // Index of the first revision we will be keeping in the array of revisions.
-        int idxToKeepFrom = 0;
+        if (indexToCompact == NOT_FOUND) {
+            return;
+        }
 
-        // Whether there is an entry with the minRevisionToKeep.
-        boolean hasMinRevision = false;
+        // Let's deal with the key revisions.
+        if (indexToCompact == revs.length - 1) {
+            keysIdx.remove(key);
+        } else {
+            List<Long> keyRevisions = keysIdx.get(key);
 
-        // Traverse revisions, looking for the first revision that needs to be kept.
-        for (long rev : revs) {
-            if (rev >= minRevisionToKeep) {
-                if (rev == minRevisionToKeep) {
-                    hasMinRevision = true;
-                }
-                break;
+            assert keyRevisions != null : toUtf8String(key);
+
+            keyRevisions.subList(0, indexToCompact + 1).clear();
+        }
+
+        // Let's deal with the key values.
+        for (int revisionIndex = 0; revisionIndex < indexToCompact; revisionIndex++) {
+            long revision = revs[revisionIndex];
+
+            NavigableMap<byte[], Value> valueByKey = revsIdx.get(revision);
+
+            valueByKey.remove(key);
+
+            if (valueByKey.isEmpty()) {
+                revsIdx.remove(revision);
             }
-
-            idxToKeepFrom++;
-        }
-
-        if (!hasMinRevision) {
-            // Minimal revision was not encountered, that mean that we are between revisions of a key, so previous revision
-            // must be preserved.
-            idxToKeepFrom--;
-        }
-
-        for (int i = idxToKeepFrom; i < revs.size(); i++) {
-            long rev = revs.get(i);
-
-            // If this revision is higher than max revision or is the last revision, we may need to keep it.
-            NavigableMap<byte[], Value> kv = revsIdx.get(rev);
-
-            Value value = kv.get(key);
-
-            if (i == idxToKeepFrom) {
-                // Check if a first entry to keep is a tombstone.
-                if (value.tombstone()) {
-                    // If this is a first revision we are keeping and it is a tombstone, then don't keep it.
-                    continue;
-                }
-            }
-
-            NavigableMap<byte[], Value> compactedKv = compactedRevsIdx.computeIfAbsent(
-                    rev,
-                    k -> new TreeMap<>(CMP)
-            );
-
-            // Keep the entry and the revision.
-            compactedKv.put(key, value);
-
-            revsToKeep.add(rev);
-        }
-
-        if (!revsToKeep.isEmpty()) {
-            compactedKeysIdx.put(key, revsToKeep);
         }
     }
 
-    private Collection<Entry> doGetAll(List<byte[]> keys, long rev) {
-        assert keys != null : "keys list can't be null.";
-        assert !keys.isEmpty() : "keys list can't be empty.";
-        assert rev >= 0;
+    private List<Entry> doGetAll(List<byte[]> keys, long revUpperBound) {
+        assert !keys.isEmpty();
+        assert revUpperBound >= 0 : revUpperBound;
 
-        Collection<Entry> res = new ArrayList<>(keys.size());
+        var res = new ArrayList<Entry>(keys.size());
 
         for (byte[] key : keys) {
-            res.add(doGet(key, rev));
+            res.add(doGet(key, revUpperBound));
         }
 
         return res;
     }
 
     private Entry doGet(byte[] key, long revUpperBound) {
-        assert revUpperBound >= 0 : "Invalid arguments: [revUpperBound=" + revUpperBound + ']';
+        assert revUpperBound >= 0 : revUpperBound;
 
-        List<Long> revs = keysIdx.get(key);
+        long[] keyRevisions = toLongArray(keysIdx.get(key));
+        int maxRevisionIndex = maxRevisionIndex(keyRevisions, revUpperBound);
 
-        if (revs == null || revs.isEmpty()) {
+        if (maxRevisionIndex == NOT_FOUND) {
+            CompactedException.throwIfRequestedRevisionLessThanOrEqualToCompacted(revUpperBound, compactionRevision);
+
             return EntryImpl.empty(key);
         }
 
-        long lastRev = maxRevision(revs, revUpperBound);
+        long revision = keyRevisions[maxRevisionIndex];
 
-        // lastRev can be -1 if maxRevision return -1.
-        if (lastRev == -1) {
-            return EntryImpl.empty(key);
+        Value value = getValue(key, revision);
+
+        if (revUpperBound <= compactionRevision && (!isLastIndex(keyRevisions, maxRevisionIndex) || value.tombstone())) {
+            throw new CompactedException(revUpperBound, compactionRevision);
         }
 
-        return doGetValue(key, lastRev);
+        return EntryImpl.toEntry(key, revision, value);
     }
 
     private List<Entry> doGet(byte[] key, long revLowerBound, long revUpperBound) {
-        assert revLowerBound >= 0 : "Invalid arguments: [revLowerBound=" + revLowerBound + ']';
-        assert revUpperBound >= 0 : "Invalid arguments: [revUpperBound=" + revUpperBound + ']';
-        assert revUpperBound >= revLowerBound
-                : "Invalid arguments: [revLowerBound=" + revLowerBound + ", revUpperBound=" + revUpperBound + ']';
-        // TODO: IGNITE-19782 throw CompactedException if revLowerBound is compacted.
+        assert revLowerBound >= 0 : revLowerBound;
+        assert revUpperBound >= 0 : revUpperBound;
+        assert revUpperBound >= revLowerBound : "revLowerBound=" + revLowerBound + ", revUpperBound=" + revUpperBound;
 
-        List<Long> revs = keysIdx.get(key);
+        long[] keyRevisions = toLongArray(keysIdx.get(key));
 
-        if (revs == null || revs.isEmpty()) {
-            return Collections.emptyList();
+        int minRevisionIndex = minRevisionIndex(keyRevisions, revLowerBound);
+        int maxRevisionIndex = maxRevisionIndex(keyRevisions, revUpperBound);
+
+        if (minRevisionIndex == NOT_FOUND || maxRevisionIndex == NOT_FOUND) {
+            CompactedException.throwIfRequestedRevisionLessThanOrEqualToCompacted(revLowerBound, compactionRevision);
+
+            return List.of();
         }
 
-        int firstRevIndex = minRevisionIndex(revs, revLowerBound);
-        int lastRevIndex = maxRevisionIndex(revs, revUpperBound);
+        var entries = new ArrayList<Entry>();
 
-        // firstRevIndex can be -1 if minRevisionIndex return -1. lastRevIndex can be -1 if maxRevisionIndex return -1.
-        if (firstRevIndex == -1 || lastRevIndex == -1) {
-            return Collections.emptyList();
+        for (int i = minRevisionIndex; i <= maxRevisionIndex; i++) {
+            long revision = keyRevisions[i];
+
+            Value value = getValue(key, revision);
+
+            if (revision <= compactionRevision && (!isLastIndex(keyRevisions, i) || value.tombstone())) {
+                continue;
+            }
+
+            entries.add(EntryImpl.toEntry(key, revision, value));
         }
 
-        List<Entry> entries = new ArrayList<>();
-
-        for (int i = firstRevIndex; i <= lastRevIndex; i++) {
-            entries.add(doGetValue(key, revs.get(i)));
+        if (entries.isEmpty()) {
+            CompactedException.throwIfRequestedRevisionLessThanOrEqualToCompacted(revLowerBound, compactionRevision);
         }
 
         return entries;
     }
 
-    /**
-     * Returns maximum revision which must be less or equal to {@code upperBoundRev}. If there is no such revision then {@code -1} will be
-     * returned.
-     *
-     * @param revs Revisions list.
-     * @param upperBoundRev Revision upper bound.
-     * @return Appropriate revision or {@code -1} if there is no such revision.
-     */
-    private static long maxRevision(List<Long> revs, long upperBoundRev) {
-        int i = revs.size() - 1;
-
-        for (; i >= 0; i--) {
-            long rev = revs.get(i);
-
-            if (rev <= upperBoundRev) {
-                return rev;
-            }
-        }
-
-        return -1;
-    }
-
-    /**
-     * Returns index of minimum revision which must be greater or equal to {@code lowerBoundRev}.
-     * If there is no such revision then {@code -1} will be returned.
-     *
-     * @param revs          Revisions list.
-     * @param lowerBoundRev Revision lower bound.
-     * @return Index of minimum revision or {@code -1} if there is no such revision.
-     */
-    private static int minRevisionIndex(List<Long> revs, long lowerBoundRev) {
-        for (int i = 0; i < revs.size(); i++) {
-            long rev = revs.get(i);
-
-            if (rev >= lowerBoundRev) {
-                return i;
-            }
-        }
-
-        return -1;
-    }
-
-    /**
-     * Returns index of maximum revision which must be less or equal to {@code upperBoundRev}.
-     * If there is no such revision then {@code -1} will be returned.
-     *
-     * @param revs          Revisions list.
-     * @param upperBoundRev Revision upper bound.
-     * @return Index of maximum revision or {@code -1} if there is no such revision.
-     */
-    private static int maxRevisionIndex(List<Long> revs, long upperBoundRev) {
-        for (int i = revs.size() - 1; i >= 0; i--) {
-            long rev = revs.get(i);
-
-            if (rev <= upperBoundRev) {
-                return i;
-            }
-        }
-
-        return -1;
-    }
-
-    private Entry doGetValue(byte[] key, long lastRev) {
-        if (lastRev == 0) {
-            return EntryImpl.empty(key);
-        }
-
-        NavigableMap<byte[], Value> lastRevVals = revsIdx.get(lastRev);
-
-        if (lastRevVals == null || lastRevVals.isEmpty()) {
-            return EntryImpl.empty(key);
-        }
-
-        Value lastVal = lastRevVals.get(key);
-
-        if (lastVal.tombstone()) {
-            return EntryImpl.tombstone(key, lastRev, lastVal.updateCounter());
-        }
-
-        return new EntryImpl(key, lastVal.bytes(), lastRev, lastVal.updateCounter());
-    }
-
-    private long doPut(byte[] key, byte[] bytes, long curRev) {
-        long curUpdCntr = ++updCntr;
-
+    private void doPut(byte[] key, byte[] bytes, long curRev, HybridTimestamp opTs) {
         // Update keysIdx.
         List<Long> revs = keysIdx.computeIfAbsent(key, k -> new ArrayList<>());
-
-        long lastRev = revs.isEmpty() ? 0 : lastRevision(revs);
 
         revs.add(curRev);
 
         // Update revsIdx.
-        Value val = new Value(bytes, curUpdCntr);
+        Value val = new Value(bytes, opTs);
 
         revsIdx.compute(
                 curRev,
@@ -793,14 +794,13 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
                 }
         );
 
-        var updatedEntry = new EntryImpl(key, val.tombstone() ? null : bytes, curRev, curUpdCntr);
+        var updatedEntry = new EntryImpl(key, val.tombstone() ? null : bytes, curRev, val.operationTimestamp());
 
         updatedEntries.add(updatedEntry);
 
-        return lastRev;
     }
 
-    private long doPutAll(long curRev, List<byte[]> keys, List<byte[]> bytesList, HybridTimestamp opTs) {
+    private void doPutAll(long curRev, List<byte[]> keys, List<byte[]> bytesList, HybridTimestamp opTs) {
         synchronized (mux) {
             // Update revsIdx.
             NavigableMap<byte[], Value> entries = new TreeMap<>(CMP);
@@ -810,25 +810,22 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
 
                 byte[] bytes = bytesList.get(i);
 
-                long curUpdCntr = ++updCntr;
-
                 // Update keysIdx.
                 List<Long> revs = keysIdx.computeIfAbsent(key, k -> new ArrayList<>());
 
                 revs.add(curRev);
 
-                Value val = new Value(bytes, curUpdCntr);
+                Value val = new Value(bytes, opTs);
 
                 entries.put(key, val);
 
-                updatedEntries.add(new EntryImpl(key, bytes, curRev, curUpdCntr));
+                updatedEntries.add(new EntryImpl(key, bytes, curRev, opTs));
 
                 revsIdx.put(curRev, entries);
             }
 
             updateRevision(curRev, opTs);
 
-            return curRev;
         }
     }
 
@@ -860,5 +857,113 @@ public class SimpleInMemoryKeyValueStorage implements KeyValueStorage {
 
             watchProcessor.advanceSafeTime(newSafeTime);
         }
+    }
+
+    @Override
+    public void saveCompactionRevision(long revision) {
+        assert revision >= 0 : revision;
+
+        synchronized (mux) {
+            assertCompactionRevisionLessThanCurrent(revision, rev);
+
+            savedCompactionRevision = revision;
+        }
+    }
+
+    @Override
+    public void setCompactionRevision(long revision) {
+        assert revision >= 0 : revision;
+
+        synchronized (mux) {
+            assertCompactionRevisionLessThanCurrent(revision, rev);
+
+            compactionRevision = revision;
+        }
+    }
+
+    @Override
+    public long getCompactionRevision() {
+        synchronized (mux) {
+            return compactionRevision;
+        }
+    }
+
+    @Override
+    public long checksum(long revision) {
+        throw new UnsupportedOperationException();
+    }
+
+    private static long[] toLongArray(@Nullable List<Long> list) {
+        if (list == null) {
+            return LONG_EMPTY_ARRAY;
+        }
+
+        var array = new long[list.size()];
+
+        for (int i = 0; i < array.length; i++) {
+            array[i] = list.get(i);
+        }
+
+        return array;
+    }
+
+    private boolean isTombstoneForCompaction(byte[] key, long revision) {
+        NavigableMap<byte[], Value> kv = revsIdx.get(revision);
+
+        Value value = kv.get(key);
+
+        assert value != null : "key=" + toUtf8String(key) + ", revision=" + revision;
+
+        return value.tombstone();
+    }
+
+    private Value getValue(byte[] key, long revision) {
+        Value value = getValueNullable(key, revision);
+
+        assert value != null : "key=" + toUtf8String(key) + ", revision=" + revision;
+
+        return value;
+    }
+
+    private @Nullable Value getValueNullable(byte[] key, long revision) {
+        NavigableMap<byte[], Value> valueByKey = revsIdx.get(revision);
+
+        assert valueByKey != null : "key=" + toUtf8String(key) + ", revision=" + revision;
+
+        return valueByKey.get(key);
+    }
+
+    private Cursor<Entry> doRange(byte[] keyFrom, byte @Nullable [] keyTo, long revUpperBound) {
+        assert revUpperBound >= 0 : revUpperBound;
+
+        CompactedException.throwIfRequestedRevisionLessThanOrEqualToCompacted(revUpperBound, compactionRevision);
+
+        SortedMap<byte[], List<Long>> subMap = keyTo == null
+                ? keysIdx.tailMap(keyFrom)
+                : keysIdx.subMap(keyFrom, keyTo);
+
+        return subMap.entrySet().stream()
+                .map(e -> {
+                    byte[] key = e.getKey();
+                    long[] keyRevisions = toLongArray(e.getValue());
+
+                    int maxRevisionIndex = maxRevisionIndex(keyRevisions, revUpperBound);
+
+                    if (maxRevisionIndex == NOT_FOUND) {
+                        return EntryImpl.empty(key);
+                    }
+
+                    long revision = keyRevisions[maxRevisionIndex];
+                    Value value = getValueNullable(key, revision);
+
+                    // Value may be null if the compaction has removed it in parallel.
+                    if (value == null || (revision <= compactionRevision && value.tombstone())) {
+                        return EntryImpl.empty(key);
+                    }
+
+                    return EntryImpl.toEntry(key, revision, value);
+                })
+                .filter(e -> !e.empty())
+                .collect(collectingAndThen(toList(), Cursor::fromIterable));
     }
 }
